--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,4 +4,6 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
+@import url("./reset.css");
+@import url("./gallery.css");
+@import url("./form.css");
